Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1634

TS should delete tmp metadata files on startup

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.0.0
    • 1.2.0
    • tserver

    Description

      I just looked at a test cluster which has lots of tablets, and found that there are 11,000 "tmp" metadata files in the consensus-meta directory, but only about 1500 live tablets on the box. The others are leftover from previous times that the server crashed, I suppose.

      It's likely this is exacerbated in a test cluster environment, but regardless we should remove '.tmp.' files at startup.

      Attachments

        Activity

          People

            smyatkin.maxim Smyatkin Maxim
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: